@@ -28,6 +28,8 @@ VERSION 2.8-Beta 1
    * Added Ctrl+H shortcut to randomize playlist, patch by Harsh Gupta. (BR 208061)
 
   CHANGES:
+   * When a new collection plugin is enabled, its collections appear immediately without a
+     need for restart.
    * Update the MusicBrainz tagger to MusicBrainz web service 2, make it show some more
      good suggestions for tagging, and add some options to help choosing the best results.
    * Add note about generating .mood files into Moodbar Options; patch by Harsh Gupta with
